--- a/src/features/login/_Responsive.scss
+++ b/src/features/login/_Responsive.scss
@@ -6,9 +6,24 @@
   .forget-password-app {
     width: 300px !important;
   }
+  .c-card-container {
+    .first-container {
+    }
+    .second-container {
+      .login-form {
+        padding: 0 14px;
+        width: 100%;
+        max-width: 400px;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .auth-wrapper {
+    background-image: none;
+    padding-top: 0 !important;
+  }
   .c-form {
     padding: 0 5px;
   }
@@ -18,6 +33,7 @@
     .second-container {
       .login-form {
         padding: 0 14px;
+        width: 100%;
       }
     }
   }
