--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,11 +59,9 @@ a {
 
 img {
   cursor: pointer;
+  user-select: none;
   -webkit-user-drag: none;
-  -khtml-user-drag: none;
-  -moz-user-drag: none;
-  -o-user-drag: none;
-  user-drag: none;
+  user-select: none !important;
 }
 
 .preloader {
@@ -484,7 +482,7 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   width: 100%;
 }
 
@@ -576,7 +574,7 @@ p {
 
   .c-label {
     display: flex;
-    align-items: end;
+    align-items: flex-start;
   }
 
   .alt-text {
@@ -769,6 +767,13 @@ p {
       width: 100%;
     }
   }
+  .ant-popover {
+    z-index: 90;
+    .ant-popover-inner {
+      width: calc(100% - 12px) !important;
+      margin: 0 auto;
+    }
+  }
 }
 
 @media screen and (min-width: 541px) and (max-width: 1024px) {
@@ -800,6 +805,13 @@ p {
   .ant-select {
     width: 100% !important;
   }
+}
+
+.ant-upload-list-text .ant-upload-list-item-name,
+.ant-upload-list-picture .ant-upload-list-item-name {
+  font-size: 10px;
+  white-space: break-spaces;
+  word-break: break-all;
 }
 @media screen and (max-width: 1024px) {
   .react-tel-input .form-control {
