--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -37,7 +37,6 @@
     padding: 0px !important;
     height: 720px;
     position: relative;
-    // overflow: hidden;
     box-shadow: 0 0 16px #00000026;
 
     .first-container {
@@ -52,7 +51,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      border-radius: 20px 0 0 20px;
+      border-radius: 20px;
+      border-bottom-right-radius: 0;
+      border-top-right-radius: 0;
 
       &.role-container {
         width: 200px;
@@ -152,7 +153,7 @@
         width: 300px;
       }
       .create-profile-button {
-        margin: 20px 0 0 0;
+        // margin: 40px 0;
       }
     }
 
@@ -183,6 +184,7 @@
 
 .form-actions {
   display: flex;
+
   button:last-of-type {
     margin-left: 1em;
   }
