--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 1124px) {
+  .signup-container {
+    &.with-form {
+      width: 100%;
+    }
+  }
+}
+
 @media only screen and (max-width: 991px) {
   .signup-container {
     &.with-form {
@@ -7,7 +15,7 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      padding: 0px !important;
+      padding: 24px 0px !important;
       height: max-content;
       position: relative;
       box-shadow: 0 0 16px #00000026;
@@ -29,7 +37,6 @@
     }
     .c-form {
       height: fit-content;
-      padding-top: 24px !important;
     }
   }
   .react-tel-input {
