--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -29,6 +29,12 @@ h1 {
   font-family: $font-medium;
 }
 
+div {
+  &.blue {
+    color: $primary;
+  }
+}
+
 .color-text {
   color: $text-color;
 }
