--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -165,6 +165,9 @@
           margin: 0 auto;
           padding: 5px 46px;
         }
+        .next-btn-2 {
+          padding: 5px 46px;
+        }
         .create-new-company {
           margin-top: 24px;
           margin-bottom: 48px;
@@ -179,6 +182,8 @@
           position: relative;
           display: flex;
           align-items: center;
+          padding-top: 40px;
+          padding-bottom: 20px;
           .header {
             position: absolute;
             top: 0;
@@ -187,14 +192,106 @@
             }
           }
           .c-input {
-            width: 100%;
+            width: 100% !important;
+            margin: 0;
             .react-tel-input {
               width: 100%;
             }
           }
+          .react-tel-input {
+            max-width: unset;
+          }
+          .c-media-picker {
+            justify-content: center;
+            flex-direction: column-reverse;
+          }
+          .avatar-upload {
+            position: relative;
+            .photo-square {
+              width: 140px;
+              height: 140px;
+              box-shadow: 0 0 10px rgba($color: black, $alpha: 0.1);
+              border-radius: 24px;
+              overflow: hidden;
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+            }
+            .c-button {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              padding: 0;
+              height: 36px;
+              width: 36px;
+            }
+          }
+          .ant-upload-select {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+          }
         }
-        .hidden {
-          display: none;
+        .third-step {
+          height: 100%;
+          position: relative;
+          display: flex;
+          align-items: center;
+          padding-top: 40px;
+          padding-bottom: 20px;
+          .header {
+            position: absolute;
+            top: 0;
+            .back-btn {
+              width: 40px;
+            }
+          }
+          .c-input {
+            width: 100% !important;
+            margin: 0;
+            .react-tel-input {
+              width: 100%;
+            }
+          }
+          .react-tel-input {
+            max-width: unset;
+          }
+          .c-media-picker {
+            justify-content: center;
+            flex-direction: column-reverse;
+          }
+          .avatar-upload {
+            position: relative;
+            .photo-square {
+              width: 140px;
+              height: 140px;
+              box-shadow: 0 0 10px rgba($color: black, $alpha: 0.1);
+              border-radius: 24px;
+              overflow: hidden;
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+            }
+            .c-button {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              padding: 0;
+              height: 36px;
+              width: 36px;
+            }
+          }
+          .ant-upload-select {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+          }
         }
       }
     }
