--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -61,8 +61,8 @@
       }
 
       &.bg-2 {
-        background: transparent url("../../assets/images/auth/signup-ban-2.jpg")
-          0% 0% no-repeat padding-box;
+        // background: transparent url("../../assets/images/auth/signup-ban-2.jpg")
+        //   0% 0% no-repeat padding-box;
         background-size: 100% 100%;
       }
 
@@ -77,8 +77,8 @@
 
       .logo {
         position: absolute;
-        top: 60px;
-        width: 200px;
+        top: 180px;
+        width: 260px;
       }
 
       h3 {
@@ -188,7 +188,7 @@
             position: absolute;
             top: 0;
             .back-btn {
-              width: 40px;
+              width: 30px;
             }
           }
           .c-input {
@@ -246,7 +246,7 @@
             position: absolute;
             top: 0;
             .back-btn {
-              width: 40px;
+              width: 30px;
             }
           }
           .c-input {
