--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -41,7 +41,7 @@
 
     .first-container {
       width: 480px !important;
-      background: transparent url("../../assets/images/auth/sign-up-back.png")
+      background: transparent url("../../assets/images/auth/signup-ban-2.jpg")
         0% 0% no-repeat padding-box;
       background-position: top;
       background-repeat: no-repeat;
@@ -54,6 +54,8 @@
       // border-radius: 20px;
       // border-bottom-right-radius: 0;
       // border-top-right-radius: 0;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
 
       &.role-container {
         width: 200px;
@@ -67,9 +69,9 @@
       }
 
       &.role-select {
-        background: transparent
-          url("../../assets/images/auth/sign-up-main-back.png") 0% 0% no-repeat
-          padding-box;
+        // background: transparent
+        //   url("../../assets/images/auth/sign-up-main-back.png") 0% 0% no-repeat
+        //   padding-box;
         background-size: 100% 100%;
         padding: 40px 15px;
         justify-content: flex-start;
@@ -99,9 +101,10 @@
         justify-content: space-around;
         align-items: flex-start;
         flex-direction: column;
-        padding: 50px 25px 0px 25px;
+        padding: 60px 25px 0px 25px;
 
         .box {
+          height: 72px;
           display: flex;
           flex-direction: row;
           justify-content: center;
@@ -140,7 +143,7 @@
     .second-container {
       max-width: 740px;
       width: 100%;
-      padding: 0 90px;
+      padding: 0 40px;
       max-width: inherit;
 
       &.signup-option {
@@ -297,7 +300,7 @@
     }
 
     &.role-container {
-      max-width: 1024px;
+      // max-width: 1024px;
       height: 720px;
 
       .second-container {
