agency sign up done employer sign up done

--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -43,6 +43,8 @@
 
       .job-img {
         width: 100px;
+        height: 100px;
+        object-fit: cover;
         border-radius: 10px;
         margin-bottom: 6px;
       }
