--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -381,6 +381,7 @@ p {
     left: 30px;
     border: none !important;
     height: 36px !important;
+    font-size: 12px;
   }
   .selected-flag:hover {
     background: transparent;
