--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -13,7 +13,7 @@
       width: 100%;
       border-radius: 20px;
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       padding: 24px 0px !important;
       height: max-content;
@@ -71,8 +71,10 @@
     }
     .second-container {
       width: 100%;
-      padding: 2em 1em !important;
+      // padding: 2em 1em !important;
+      padding: 2em 16px !important;
       .responsive-bottom-section {
+        justify-content: center !important;
         max-width: 300px;
         margin: 0 auto;
       }
