--- a/src/features/jobSeekers/_JobSeekers.scss
+++ b/src/features/jobSeekers/_JobSeekers.scss
@@ -17,7 +17,7 @@
     padding: 0 70px;
     .c-row {
       display: flex;
-
+      align-items: center;
       .w-55 {
         width: 55%;
       }
