--- a/src/features/jobs/_Jobs.scss
+++ b/src/features/jobs/_Jobs.scss
@@ -137,6 +137,7 @@
       }
       .jobs-filter-header-secrion {
         display: flex;
+        flex-grow: 1;
       }
 
       .jobs-button-section {
