--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -75,7 +75,7 @@
       padding: 2em 16px !important;
       .responsive-bottom-section {
         justify-content: center !important;
-        max-width: 300px;
+        // max-width: 300px;
         margin: 0 auto;
       }
 
