--- a/src/shared-ui/JobCard/_JobCard.scss
+++ b/src/shared-ui/JobCard/_JobCard.scss
@@ -204,7 +204,7 @@
 
   &.box {
     height: 200px;
-    // width: 200px;
+    width: 200px;
     flex-direction: column;
     align-items: flex-start;
     padding: 15px 15px 5px 15px;
@@ -246,12 +246,7 @@
   }
 }
 
-
-
-
-
 // 0000000000000000000000000000000000000000000000000000000000000
-
 
 @media screen and (max-width: 540px) {
   .c-job-card {
