--- a/src/features/services/_Responsive.scss
+++ b/src/features/services/_Responsive.scss
@@ -33,10 +33,10 @@
         margin-top: -10px;
         img {
           margin: 0;
-          width: 38px;
-          min-width: fit-content;
-          min-height: fit-content;
-          margin: 10px 20px 0 10px;
+          width: 40px;
+          // min-width: fit-content;
+          // min-height: fit-content;
+          margin: 10px 10px 0 10px;
         }
       }
     }
