Home page fixes related to validation

--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -126,6 +126,7 @@
             top: 0;
             .back-btn {
               width: 40px;
+              margin-top: 0px !important;
             }
           }
           .c-input {
