--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -25,11 +25,12 @@
   &.no-shadow {
     box-shadow: none;
   }
-
+  &.with-form.height-720 {
+    height: 750px !important;
+  }
   &.with-form {
     width: 1100px;
     background-color: #fff;
-
     border-radius: 20px;
     display: flex;
     justify-content: flex-start;
