--- a/src/app-ui/Footer/_Footer.scss
+++ b/src/app-ui/Footer/_Footer.scss
@@ -21,6 +21,7 @@
       .logo {
         max-width: 300px;
         width: 100%;
+        margin-bottom: 15px;
       }
       h3 {
         font-family: $font-bold !important;
