--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -903,3 +903,6 @@ html {
   margin-top: -7px;
   line-height: 0;
 }
+.ant-select .ant-select-selector .ant-select-selection-placeholder {
+  font-size: 12px;
+}
