--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -169,3 +169,18 @@
     width: 330px;
   }
 }
+@media only screen and (max-width: 540px) {
+  .c-container {
+    padding: 50px 15px 50px 15px !important;
+    .c-card-with-lines {
+      min-width: unset !important;
+      width: 100% !important;
+      .inner-container {
+        width: unset !important;
+      }
+      .lines-icon {
+        width: 131px !important;
+      }
+    }
+  }
+}
