--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/variables";
+@import '../../assets/scss/variables';
 
 .c-job-detail-card {
   .header {
@@ -118,13 +118,13 @@
         width: 18px;
       }
       .following-icon {
-        background-image: url("./../../assets/images/icons/following-blue-icon.svg");
+        background-image: url('./../../assets/images/icons/following-blue-icon.svg');
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
       }
       .c-button:hover > .following-icon {
-        background-image: url("./../../assets/images/icons/following-white-icon.svg") !important;
+        background-image: url('./../../assets/images/icons/following-white-icon.svg') !important;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -149,6 +149,22 @@
           flex-direction: column;
           padding: 0px 20px 0px 0px;
           margin: 0px 0px 10px 0px;
+          .company-page-heading {
+            padding: 0 0 0 25px;
+            position: relative;
+            font-family: $font-subtitle;
+            margin-bottom: 10px;
+            margin-top: 10px;
+            &::after {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: calc(50% - 2px);
+              height: 2px;
+              width: 15px;
+              background-color: $text-color;
+            }
+          }
 
           .block-title {
             font-size: $font-size-md;
