--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
-$primary: #2a8fff;
+$primary: #5271ff;
 $secondary: #171c3c;
 $white: #ffffff;
 $black: #000000;
 $text-color: #2d2f44;
-$blue: #2a8fff;
+$blue: #5271ff;
 $green: #7ed957;
 $purple: #6c5984;
 $light-purple: #cb6ce6;
