--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -542,12 +542,12 @@
       transform: rotate(0deg) scale(1) translate(-50%, -50%) !important;
       width: 10px;
       height: 10px !important;
-      background: #2a8fff !important;
+      background: #5271ff !important;
       left: 50%;
       border: none !important;
     }
     background-color: #ffffff !important;
-    border-color: #2a8fff !important;
+    border-color: #5271ff !important;
   }
 }
 .ant-radio-inner {
