--- a/src/app-ui/Footer/_Footer.scss
+++ b/src/app-ui/Footer/_Footer.scss
@@ -7,6 +7,7 @@
     background-color: $white;
     z-index: 22;
     position: relative;
+    box-shadow: 0 -8px 8px -8px rgba(128, 128, 128, 0.4);
     ul {
       display: flex;
       flex-direction: column;
