--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -115,7 +115,7 @@
           margin-bottom: 48px;
           text-align: center;
           .create-new-btn {
-            color: #2a8fff;
+            color: #5271ff;
             cursor: pointer;
           }
         }
