--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -260,3 +260,61 @@
     width: 200px !important;
   }
 }
+
+button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
+  background: transparent;
+  height: 100%;
+  width: 60px;
+  right: 0;
+  border-radius: 0;
+  transition: 0.3s all;
+  background-size: 0px;
+  border-radius: 90% 0 0 90%;
+  &::before {
+    background-color: #fff;
+    color: #000;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    left: 8px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+  }
+}
+button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--left {
+  background: transparent;
+  height: 100%;
+  width: 60px;
+  left: 0;
+  border-radius: 0;
+  transition: 0.3s all;
+  background-size: 0px;
+  border-radius: 0 90% 90% 0;
+  &::before {
+    background-color: #fff;
+    color: #000;
+    height: 30px;
+    width: 30px;
+    left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+  }
+}
+button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 3px 5px 10px 14px rgba(255, 255, 255, 0.3);
+}
+button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--left:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 3px 5px 10px 14px rgba(255, 255, 255, 0.3);
+}
+.company-photos-carousel {
+  ul {
+    li {
+      padding: 0 10px;
+    }
+  }
+}
