home page job ui  update

--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -1,4 +1,4 @@
-@import '../../assets/scss/variables';
+@import "../../assets/scss/variables";
 
 .c-job-detail-card {
   .header {
@@ -104,13 +104,19 @@
 
       .actions-wrapper {
         display: flex;
-        max-width: 250px;
-        width: 100%;
-        justify-content: space-between;
+        max-width: unset;
+        width: 60%;
+        justify-content: flex-end;
         align-items: center;
 
         button {
-          margin: 0px 2px;
+          margin: 0px 0px;
+          width: 120px;
+          margin-right: 5px;
+          font-size: 12px;
+          a {
+            font-size: 12px;
+          }
         }
       }
       .icon {
@@ -118,16 +124,19 @@
         width: 18px;
       }
       .following-icon {
-        background-image: url('./../../assets/images/icons/following-blue-icon.svg');
+        background-image: url("./../../assets/images/icons/following-blue-icon.svg");
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
       }
       .c-button:hover > .following-icon {
-        background-image: url('./../../assets/images/icons/following-white-icon.svg') !important;
+        background-image: url("./../../assets/images/icons/following-white-icon.svg") !important;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
+      }
+      .c-button {
+        padding: 4px 25px;
       }
     }
 
@@ -136,7 +145,7 @@
       justify-content: space-between;
 
       &.first {
-        padding: 25px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
       }
 
       .content-section {
@@ -149,6 +158,9 @@
           flex-direction: column;
           padding: 0px 20px 0px 0px;
           margin: 0px 0px 10px 0px;
+          .c-job-card.box {
+            width: 100%;
+          }
           .company-page-heading {
             padding: 0 0 0 25px;
             position: relative;
@@ -156,7 +168,7 @@
             margin-bottom: 10px;
             margin-top: 10px;
             &::after {
-              content: '';
+              content: "";
               position: absolute;
               left: 0;
               top: calc(50% - 2px);
