HomePage: FindJob Section Fix

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -32,3 +32,10 @@
 ::-webkit-scrollbar-thumb:hover {
   background: $secondary;
 }
+
+.layouts {
+  height: 100vh;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
