--- a/src/features/jobs/_Jobs.scss
+++ b/src/features/jobs/_Jobs.scss
@@ -1,24 +1,25 @@
 @import "../../assets/scss/variables";
 
 .jobs-page {
-  position: relative;
+  overflow-y: auto;
+  height: calc(100vh - 65px);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+
+  .jobs-wrapper {
+    flex-grow: 1;
+  }
   .header-wrapper {
     height: 110px;
     padding: 0px 50px 0px 50px;
     background: rgb(2, 0, 36);
-    background: linear-gradient(
-      90deg,
-      rgba(2, 0, 36, 1) 0%,
-      rgba(52, 30, 91, 1) 0%,
-      rgba(245, 38, 102, 1) 100%
-    );
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(52, 30, 91, 1) 0%, rgba(245, 38, 102, 1) 100%);
 
     .header {
       flex-direction: row;
       align-items: center;
       width: 100%;
-      height: 100%;
       justify-content: space-between;
       padding: 0px 5px;
 
@@ -80,29 +81,44 @@
   .jobs-wrapper {
     display: flex;
     padding: 0px;
+    overflow: hidden;
+
     .find-jobs-section {
       width: 35%;
+      height: 100%;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+
+      .job-sc {
+      }
     }
 
     .jobs-list {
       padding: 15px 30px;
-      height: calc(100vh - 124px);
-      overflow-y: scroll;
+      flex-grow: 1;
+      overflow-y: auto;
     }
 
     .job-details {
       overflow: hidden;
       flex: 1;
-      height: calc(100vh - 64px);
       overflow-y: auto;
       // background: #efefef;
       z-index: 200 !important;
+      .back-icon-job {
+        position: absolute;
+        color: #fff;
+        font-size: 25px;
+        top: 6px;
+        z-index: 101;
+        right: 6px;
+      }
       .ant-empty {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100%;
       }
     }
 
@@ -142,20 +158,21 @@
         input#location {
           padding: 0 7px !important;
         }
-        .icon-in-super-select{
+        .icon-in-super-select {
           position: relative;
           width: 100%;
-          img{
-            position:absolute;
-            left : 0;
+          img {
+            position: absolute;
+            left: 0;
             top: 7px;
             z-index: 41;
             padding-left: 12px;
           }
-          .ant-select-single.ant-select-show-arrow .ant-select-selection-item, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+          .ant-select-single.ant-select-show-arrow .ant-select-selection-item,
+          .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
             padding-right: 18px;
             padding-left: 14px;
-        }
+          }
         }
       }
 
