--- a/src/features/jobs/_Responsive.scss
+++ b/src/features/jobs/_Responsive.scss
@@ -1,37 +1,3 @@
-// @media screen and (max-width: 540px) {
-//   .jobs-page {
-//     .jobs-wrapper {
-//       width: 100%;
-
-//       .find-jobs-section {
-//         flex-grow: 1;
-//       }
-//       .job-details {
-//         position: absolute;
-//         background-color: white;
-//         width: 100%;
-//         transform: translateX(100%);
-//         transition: all ease 0.3s;
-//         z-index: 1;
-//         top: 0;
-//         left: 0;
-//         // .navigation-header {
-//         //   height: 60px;
-//         //   background-color: whitesmoke;
-//         // }
-//       }
-//       .job-details-show {
-//         transform: translateX(0);
-//         transition: all ease 0.3s;
-//       }
-//       .jobs-list {
-//         // padding: 12px 10px;
-//         padding: 10px 10px 10px 10px;
-//         overflow-y: auto;
-//       }
-//     }
-//   }
-// }
 @media screen and (max-width: 1024px) {
   .jobs-page {
     .jobs-wrapper {
@@ -44,39 +10,7 @@
     }
   }
 }
-@media screen and (max-width: 540px) {
-  .jobs-page {
-    .jobs-wrapper {
-      width: 100%;
 
-      .find-jobs-section {
-        flex-grow: 1;
-      }
-      .job-details {
-        position: absolute;
-        background-color: white;
-        width: 100%;
-        transform: translateX(100%);
-        transition: all ease 0.3s;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        // .navigation-header {
-        //   height: 60px;
-        //   background-color: whitesmoke;
-        // }
-      }
-      .job-details-show {
-        transform: translateX(0);
-        transition: all ease 0.3s;
-      }
-      .jobs-list {
-        padding: 10px 10px 10px 10px;
-        overflow-y: auto;
-      }
-    }
-  }
-}
 @media screen and (max-width: 1024px) {
   .jobs-page {
     .jobs-wrapper {
@@ -147,6 +81,41 @@
             margin: 6px 0;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .jobs-page {
+    .jobs-wrapper {
+      width: 100%;
+
+      .find-jobs-section {
+        flex-grow: 1;
+      }
+      .job-details {
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        transform: translateX(0);
+        display: none;
+        transition: all ease 0.3s;
+        z-index: 100;
+        // .navigation-header {
+        //   height: 60px;
+        //   background-color: whitesmoke;
+        // }
+      }
+      .job-details-show {
+        transform: translateX(0);
+        transition: all ease 0.3s;
+        height: 100%;
+        display: block;
+      }
+      .jobs-list {
+        padding: 10px 10px 10px 10px;
+        overflow-y: auto;
       }
     }
   }
