--- a/src/features/privacyPolicy/_PrivacyPolicy.scss
+++ b/src/features/privacyPolicy/_PrivacyPolicy.scss
@@ -113,6 +113,7 @@
         li {
           text-align: left;
           div {
+            font-size: 12px !important;
             margin-right: 10px;
             min-width: 28px;
           }
